--- a/九宫格.html
+++ b/九宫格.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>任务1</title>
+    <link rel="stylesheet" type="text/css" href="任务1.css">
 </head>
 <body>
     <div class = "wrap">
