--- a/九宫格.html
+++ b/九宫格.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>任务1</title>
     <link rel="stylesheet" type="text/css" href="任务1.css">
+    <link rel="stylesheet" type="text/css" href="任务1.css"> //引用外部css.
 </head>
 <body>
     <div class = "wrap">
